// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList renders TaskList component for close task 1`] = `
<div>
  <section
    class="card mt-5 shadow-sm"
  >
    <div
      class="card-header d-flex justify-content-between align-items-center"
    >
      <div>
        <h5>
          Task Title Test
        </h5>
        <h6
          class="card-subtitle text-muted"
        >
          Task Description Test
        </h6>
      </div>
      <div>
        <button
          class="btn btn-outline-danger btn-sm ml-2"
        >
          Delete
        </button>
      </div>
    </div>
    <ul
      class="list-group list-group-flush"
    />
  </section>
</div>
`;

exports[`TaskList renders TaskList component with data 1`] = `
<div>
  <section
    class="card mt-5 shadow-sm"
  >
    <div
      class="card-header d-flex justify-content-between align-items-center"
    >
      <div>
        <h5>
          Task Title Test
        </h5>
        <h6
          class="card-subtitle text-muted"
        >
          Task Description Test
        </h6>
      </div>
      <div>
        <button
          class="btn btn-dark btn-sm"
        >
          Finish
        </button>
        <button
          class="btn btn-outline-danger btn-sm ml-2"
        >
          Delete
        </button>
      </div>
    </div>
    <ul
      class="list-group list-group-flush"
    />
    <div
      class="card-body"
    >
      <form>
        <div
          class="input-group"
        >
          <label
            class="sr-only"
            for="operationDescription"
          />
          <input
            class="form-control"
            id="operationDescription"
            minlength="5"
            placeholder="Operation description"
            type="text"
          />
          <div
            class="input-group-append"
          >
            <button
              class="btn btn-info"
            >
              Add
            </button>
          </div>
        </div>
      </form>
    </div>
  </section>
</div>
`;
